--- a/index.html
+++ b/index.html
@@ -46,12 +46,10 @@
 
 <script type="text/javascript" src="lib/jquery.js"></script>
 <script type="text/javascript" src="lib/jquery-ui.js"></script>
-<script type="text/javascript" src="lib/jquery.jstree.min.js"></script>
 <script type="text/javascript" src="lib/rpc.js"></script>
 <script type="text/javascript" src="lib/json2.js"></script>
 <script type="text/javascript" src="lib/dump.js"></script>
-<script type="text/javascript" src="lib/sprintf.js"></script>
-<script type="text/javascript" src="config.js"></script>
+<script type="text/javascript" src="lib/jnotifica.js"></script>
 <script type="text/javascript" src="client.js"></script>
 <script type="text/javascript">
 <!--
