--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
 		</ul>
 		<div id="tab-traffic">
 			<p>Documentation:
-			<a href="http://www.iitis.pl/~pjf/iitis-generator/doc/iitis-generator-traffic.5.html">iitis-generator-traffic(5)</a>
+			<a target="_blank" href="http://www.iitis.pl/~pjf/iitis-generator/doc/iitis-generator-traffic.5.html">iitis-generator-traffic(5)</a>
 			</p>
 			<textarea class="taskdef" id="traffic"></textarea>
 		</div>
 		<div id="tab-gen">
 			<p>Documentation:
-			<a href="http://www.iitis.pl/~pjf/iitis-generator/doc/iitis-generator-conf.5.html">iitis-generator-conf(5)</a>
+			<a target="_blank" href="http://www.iitis.pl/~pjf/iitis-generator/doc/iitis-generator-conf.5.html">iitis-generator-conf(5)</a>
 			</p>
 			<textarea class="taskdef" id="generator"></textarea>
 		</div>
 		<div id="tab-wifi">
 			<p>System startup script. Documentation:
-				<a href="http://linuxwireless.org/en/users/Documentation/iw#Adding_interfaces_with_iw">iw</a>
+				<a target="_blank"  href="http://linuxwireless.org/en/users/Documentation/iw#Adding_interfaces_with_iw">iw</a>
 			</p>
 			<textarea class="taskdef" id="wifi"></textarea>
 		</div>
