favour notes in traffic files

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<li><a href="#tab-traffic">Traffic</a></li>
 			<li><a href="#tab-gen">Generator</a></li>
 			<li><a href="#tab-wifi">WiFi</a></li>
-			<li><a href="#tab-notes">Notes</a></li>
+<!--			<li><a href="#tab-notes">Notes</a></li> //-->
 		</ul>
 		<div id="tab-traffic">
 			<p>Documentation:
@@ -51,14 +51,15 @@
 		</div>
 		<div id="tab-wifi">
 			<p>System startup script. Documentation:
-				<a target="_blank"  href="http://linuxwireless.org/en/users/Documentation/iw#Adding_interfaces_with_iw">iw</a>
+				<a target="_blank" href="http://linuxwireless.org/en/users/Documentation/iw#Adding_interfaces_with_iw">iw</a>.
+				<b>Full reboot required after changes</b>
 			</p>
 			<textarea class="taskdef" id="wifi"></textarea>
 		</div>
-		<div id="tab-notes">
+<!--		<div id="tab-notes">
 			<p>Place for user notes</p>
 			<textarea class="taskdef" id="notes"></textarea>
-		</div>
+		</div> -->
 	</div>
 </div>
 
