warn about unavailable frequencies

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 		</ul>
 		<div id="tab-traffic">
 			<p>Documentation:
-			<a target="_blank" href="http://www.iitis.pl/~pjf/iitis-generator/doc/iitis-generator-traffic.5.html">iitis-generator-traffic(5)</a>
+			<a target="_blank" href="http://www.iitis.pl/~pjf/iitis-generator/doc/iitis-generator-traffic.5.html">iitis-generator-traffic(5)</a>.
+			<b>Remember to check if chosen bitrates are available</b>
 			</p>
 			<textarea class="taskdef" id="traffic"></textarea>
 		</div>
